--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -76,7 +76,7 @@ Summarizing the benefits of a program with a diverse array of outcomes across ma
 
 A fundamental problem facing the evaluation of any human capital program is assessing out of sample future benefits of the program. Most solutions to this problem are based on versions of a synthetic cohort approach using the adjusted outcomes of older cohorts comparable to treated individuals to proxy treatment effects.\footnote{\cite{Mincer_1974_schooling} addresses this problem using a synthetic cohort approach and provides evidence on its validity. See the discussion of the synthetic cohort approach in \cite{Heckman_Lochner_ea_2006_HEE}.} We address this problem by using a variety of sources of information up to age 34, combined with information from multiple panel data sources to predict benefits and costs over the lifetimes of participants.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a valuable discussion of data pooling methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g., \citealp{Prentice_1989_Surrogate_SiM}).}
 
-A sufficient condition for making valid out of sample predictions is that program treatment effects arise as changes in inputs in a stable (across treatment regimes) production function. Evidence supporting this assumption is given in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \cite{Attanasio-etal_2015_NBER_Estimating-Production}. We test and do not reject this assumption in this paper.
+A sufficient condition for making valid out of sample predictions is that program treatment effects arise as changes in inputs in a stable (across treatment regimes) production function. Evidence supporting this assumption is given in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \cite{Attanasio-etal_2015_NBER_Estimating-Production}. We test and do not reject this assumption in this paper.\footnote{An appealing feature of our test is that it is based on larger sample. We perform it across multiple data sources. See Appendix{appendix:pred} for details.}
 
 We account for sampling uncertainty from pooling data and conduct sensitivity analyses for outcomes for which sampling uncertainty is not readily quantified. Our approach to pooling multiple data sets and analyzing blocks of outcomes is of interest in its own right as a template for evaluating other programs with numerous long-run outcomes using intermediate outcome measures.
 
@@ -400,7 +400,7 @@ For any $\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}$ in $\sup(\bm{X},\bm{Y},\bm{B})
 \phi^1_{j,t} (\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}) = \phi^0_{j,t} (\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}) \qquad j \in \mathcal J_t, \quad t \in \{0,\dots,T\},
 \end{equation*}
 \end{assumption}
-i.e., treatment effects operate through inputs and not shifts in the input-output functions. Evidence for this assumption in the context of early childhood programs is presented in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \citet{Attanasio-etal_2015_NBER_Estimating-Production}.
+i.e., treatment effects operate through inputs and not shifts in the input-output functions. Evidence for this assumption in the context of early childhood programs is presented in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \citet{Attanasio-etal_2015_NBER_Estimating-Production}. Appendix~\ref{appendix:pred} displays evidence favoring this assumption using each of the synthetic treatment and control groups we construct, i.e. based on different non-experimental samples.
 
 We make a corresponding assumption for the equation governing the evolution of inputs:
 \addtocounter{assumption}{-1}
