--- a/output/cnlsy_predict.tex
+++ b/output/cnlsy_predict.tex
@@ -1,27 +1,24 @@
-\begin{tabular}{lcccccc} \hline
- & (1) & (2) & (3) & (4) & (5) & (6) \\
- & cnlsyZc & cnlsyZt & cnlsyZXc & cnlsyZXt & cnlsyZLc & cnlsyZLt \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  &  &  &  \\
-male & 7,562.770*** & 7,391.996*** & 7,267.662*** & 7,243.327*** & 3,371.816*** & 3,482.692*** \\
+\begin{tabular}{lcccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) \\ 
+Group Matched & Control & Treatment & Control & Treatment & Control & Treatment \\ \mdirule
+Male & 7,562.770*** & 7,391.996*** & 7,267.662*** & 7,243.327*** & 3,371.816*** & 3,482.692*** \\
  & (931.432) & (969.098) & (982.419) & (1,021.915) & (1,219.539) & (1,293.471) \\
-black & -8,062.700*** & -8,145.951*** & -4,206.202*** & -4,187.239*** & -2,232.158* & -2,305.822* \\
+Black & -8,062.700*** & -8,145.951*** & -4,206.202*** & -4,187.239*** & -2,232.158* & -2,305.822* \\
  & (923.830) & (961.930) & (994.330) & (1,035.753) & (1,170.938) & (1,217.551) \\
-m\_ed0y & 1,905.898*** & 1,845.036*** & 326.706 & 317.739 & 312.391 & 271.119 \\
+ Mother's Education & 1,905.898*** & 1,845.036*** & 326.706 & 317.739 & 312.391 & 271.119 \\
  & (256.525) & (269.214) & (287.927) & (302.341) & (350.992) & (382.074) \\
-piatmath &  &  & 158.981*** & 160.564*** & 164.955** & 164.858** \\
+PIAT (5-7) &  &  & 158.981*** & 160.564*** & 164.955** & 164.858** \\
  &  &  & (47.848) & (49.578) & (64.085) & (66.831) \\
-years\_30y &  &  & 3,737.285*** & 3,795.924*** & 2,259.366*** & 2,390.191*** \\
+Education (30) &  &  & 3,737.285*** & 3,795.924*** & 2,259.366*** & 2,390.191*** \\
  &  &  & (245.901) & (259.968) & (419.113) & (446.233) \\
-si21y\_inc\_labor &  &  & 0.501*** & 0.491*** &  &  \\
+Labor Income (21) &  &  & 0.501*** & 0.491*** &  &  \\
  &  &  & (0.055) & (0.059) &  &  \\
-si34y\_bmi &  &  & -42.222 & -45.051 & -167.491* & -177.528* \\
- &  &  & (69.602) & (71.813) & (90.534) & (95.291) \\
-inc\_labor28 &  &  &  &  & 0.480*** & 0.458*** \\
+Labor Income (28) &  &  &  &  & 0.480*** & 0.458*** \\
  &  &  &  &  & (0.071) & (0.073) \\
+ BMI (34) &  &  & -42.222 & -45.051 & -167.491* & -177.528* \\
+ &  &  & (69.602) & (71.813) & (90.534) & (95.291) \\
 Constant & 4,569.515 & 5,453.822* & -47,539.695*** & -48,343.759*** & -30,703.149*** & -31,243.473*** \\
- & (2,925.144) & (3,071.038) & (5,260.055) & (5,491.195) & (6,852.624) & (7,129.126) \\
- &  &  &  &  &  &  \\
-Observations & 1,880 & 1,876 & 1,463 & 1,459 & 734 & 733 \\
- R-squared & 0.095 & 0.093 & 0.297 & 0.295 & 0.499 & 0.488 \\ \hline
+ & (2,925.144) & (3,071.038) & (5,260.055) & (5,491.195) & (6,852.624) & (7,129.126) \\ \\ \midrule
+ Observations & 1,880 & 1,876 & 1,463 & 1,459 & 734 & 733 \\
+$R^2$ & 0.095 & 0.093 & 0.297 & 0.295 & 0.499 & 0.488 \\ \bottomrule
 \end{tabular}
