--- a/output/psid_predict.tex
+++ b/output/psid_predict.tex
@@ -1,21 +1,18 @@
-\begin{tabular}{lcccccccc} \hline
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\
- & psidZc & psidZt & psidZXc & psidZXt & psidZLc & psidZLt & psidZL1c & psidZL1t \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  &  &  &  &  &  \\
-male & 17,147.731*** & 17,424.243*** & 17,884.882*** & 18,184.743*** & 15,457.600*** & 15,783.008*** & 6,928.722*** & 7,148.259*** \\
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+Group Matched & Control & Treatment & Control & Treatment & Control & Treatment & Control & Treatment \midrule
+Male & 17,147.731*** & 17,424.243*** & 17,884.882*** & 18,184.743*** & 15,457.600*** & 15,783.008*** & 6,928.722*** & 7,148.259*** \\
  & (427.203) & (435.550) & (399.610) & (407.460) & (767.760) & (785.616) & (423.131) & (427.620) \\
-black & -10,192.551*** & -10,714.937*** & -6,414.901*** & -6,362.179*** & -5,235.248*** & -5,251.909*** & -1,911.585*** & -1,885.167*** \\
+Black & -10,192.551*** & -10,714.937*** & -6,414.901*** & -6,362.179*** & -5,235.248*** & -5,251.909*** & -1,911.585*** & -1,885.167*** \\
  & (417.015) & (425.366) & (384.574) & (390.097) & (643.720) & (659.439) & (334.607) & (337.957) \\
-years\_30y &  &  & 4,572.052*** & 4,646.818*** & 5,014.011*** & 5,168.051*** & 1,811.012*** & 1,847.614*** \\
+Education (30) &  &  & 4,572.052*** & 4,646.818*** & 5,014.011*** & 5,168.051*** & 1,811.012*** & 1,847.614*** \\
  &  &  & (104.370) & (108.974) & (198.940) & (207.323) & (106.276) & (109.084) \\
-inc\_labor21 &  &  &  &  & 0.374*** & 0.369*** &  &  \\
+Labor Income (21) &  &  &  &  & 0.374*** & 0.369*** &  &  \\
  &  &  &  &  & (0.028) & (0.028) &  &  \\
-inc\_labor28 &  &  &  &  &  &  & 0.728*** & 0.730*** \\
+Labor Income (28) &  &  &  &  &  &  & 0.728*** & 0.730*** \\
  &  &  &  &  &  &  & (0.015) & (0.016) \\
 Constant & 25,646.674*** & 26,554.653*** & -35,233.398*** & -36,381.964*** & -44,414.516*** & -46,444.070*** & -15,732.127*** & -16,389.372*** \\
- & (322.182) & (330.537) & (1,339.960) & (1,410.863) & (2,456.996) & (2,575.524) & (1,265.566) & (1,309.537) \\
- &  &  &  &  &  &  &  &  \\
+ & (322.182) & (330.537) & (1,339.960) & (1,410.863) & (2,456.996) & (2,575.524) & (1,265.566) & (1,309.537) \\ \\ \midrule
 Observations & 13,908 & 13,901 & 13,908 & 13,901 & 4,112 & 4,112 & 9,812 & 9,810 \\
- R-squared & 0.154 & 0.156 & 0.270 & 0.271 & 0.334 & 0.337 & 0.633 & 0.633 \\ \hline
+$R^2$ & 0.154 & 0.156 & 0.270 & 0.271 & 0.334 & 0.337 & 0.633 & 0.633 \\ \toprule
 \end{tabular}
