--- a/output/nlsy_predict.tex
+++ b/output/nlsy_predict.tex
@@ -1,21 +1,17 @@
-\begin{tabular}{lcccccccc} \hline
+\begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\
- & nlsyZc & nlsyZt & nlsyZXc & nlsyZXt & nlsyZLc & nlsyZLt & nlsyZL1c & nlsyZL1t \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  &  &  &  &  &  \\
-male & 6,219.175*** & 6,356.307*** & 7,117.820*** & 7,607.672*** & 5,725.956*** & 6,216.821*** & 2,106.570*** & 2,311.490*** \\
+ Group Matched & Control & Treatment & Control & Treatment & Control & Treatment & Control & Treatment \\ \midrule
+Male & 6,219.175*** & 6,356.307*** & 7,117.820*** & 7,607.672*** & 5,725.956*** & 6,216.821*** & 2,106.570*** & 2,311.490*** \\
  & (381.462) & (444.690) & (352.939) & (407.219) & (364.544) & (425.777) & (265.712) & (303.553) \\
-black & -5,607.642*** & -5,688.084*** & -5,150.394*** & -4,994.999*** & -3,823.029*** & -3,775.318*** & -1,737.614*** & -1,621.612*** \\
+Black & -5,607.642*** & -5,688.084*** & -5,150.394*** & -4,994.999*** & -3,823.029*** & -3,775.318*** & -1,737.614*** & -1,621.612*** \\
  & (386.635) & (439.804) & (356.854) & (399.225) & (381.924) & (431.636) & (256.122) & (287.850) \\
-years\_30y &  &  & 2,536.795*** & 2,634.281*** & 2,593.961*** & 2,706.537*** & 799.974*** & 773.933*** \\
+Education (30) &  &  & 2,536.795*** & 2,634.281*** & 2,593.961*** & 2,706.537*** & 799.974*** & 773.933*** \\
  &  &  & (81.757) & (95.205) & (85.765) & (100.476) & (73.768) & (79.358) \\
-inc\_labor21 &  &  &  &  & 0.637*** & 0.627*** &  &  \\
+Labor Income (21) &  &  &  &  & 0.637*** & 0.627*** &  &  \\
  &  &  &  &  & (0.043) & (0.050) &  &  \\
-inc\_labor28 &  &  &  &  &  &  & 0.774*** & 0.782*** \\
+Labor Income (28) &  &  &  &  &  &  & 0.774*** & 0.782*** \\
  &  &  &  &  &  &  & (0.021) & (0.022) \\
 Constant & 15,572.398*** & 16,568.877*** & -17,659.060*** & -18,893.301*** & -21,611.129*** & -22,998.860*** & -5,761.074*** & -5,570.719*** \\
- & (304.541) & (336.484) & (1,085.558) & (1,274.381) & (1,148.548) & (1,366.048) & (834.721) & (959.266) \\
- &  &  &  &  &  &  &  &  \\
-Observations & 7,297 & 5,874 & 7,297 & 5,874 & 6,650 & 5,291 & 6,601 & 5,324 \\
- R-squared & 0.102 & 0.095 & 0.245 & 0.250 & 0.309 & 0.305 & 0.690 & 0.693 \\ \hline
+ & (304.541) & (336.484) & (1,085.558) & (1,274.381) & (1,148.548) & (1,366.048) & (834.721) & (959.266) \\ \\ \midulre Observations & 7,297 & 5,874 & 7,297 & 5,874 & 6,650 & 5,291 & 6,601 & 5,324 \\
+$R^2$ & 0.102 & 0.095 & 0.245 & 0.250 & 0.309 & 0.305 & 0.690 & 0.693 \\ \hline
 \end{tabular}
