--- a/output/allsamplesmatch.tex
+++ b/output/allsamplesmatch.tex
@@ -1,22 +1,30 @@
-% matrix: allpred file: allsamplesmatch.tex  14 Sep 2016 19:35:20
-\begin{table}[htbp]
-\begin{tabular}{lcccccccccc} \hline \hline
- \multicolumn{1}{c}{ male }  & years 30y  & si21y inc labor  & si30y inc labor  & si34y bmi  & male  & years 30y  & si21y inc labor  & si30y inc labor  & si34y bmi  \\  \hline 
-    0.487 &    12.279 & 13890.419 & 26083.818 &    32.737 &     0.507 &    13.646 & 14057.678 & 38461.222 &    31.299 \\  
-    0.503 &     2.265 & 12603.333 & 26747.451 &     7.168 &     0.503 &     2.414 & 11472.872 & 58824.180 &     6.363 \\  
-        . &         . &         . & 28967.969 &         . &         . &         . &         . & 40593.992 &         . \\  
-        . &         . &         . & 32662.494 &         . &         . &         . &         . & 56871.180 &         . \\  
-    0.472 &    12.898 &    12.124 & 31311.562 &    26.835 &     0.479 &    13.080 &    12.195 & 32445.578 &    26.737 \\  
-    0.499 &     1.985 &     1.971 & 96894.465 &     5.779 &     0.500 &     1.993 &     1.988 &  1.01e+05 &     5.729 \\  
+\begin{tabular}{ccccccccccc} \hline \hline
+\multicolumn{5}{c}{\textbf{Treatment}} & \multicolumn{5}{c}{\textbf{Treatment}} \\
+Male  & Education (30)  & Labor Income (21) & Labor Income (30)  & BMI (34) & Male  & Education (30)  & Labor Income (21) & Labor Income (30)  & BMI (34)  \\  \midrule
+\multicolumn{10}{l}{\textit{\textbf{ABC/CARE}}} \\
+\multicolumn{10}{l}{\textit{\textbf{Actual}}} \\
+    0.487 &    12.279 & 13,890.419 & 26,083.818 &    32.737 &     0.507 &    13.646 & 14,057.678 & 38,461.222 &    31.299 \\  
+    (0.503) &     (2.265) & (12,603.333) & (26,747.451) &     (7.168) &     (0.503) &     (2.414) & (11,472.872) & (58,824.180) &     (6.363) \\  
+\multicolumn{10}{l}{\textit{\textbf{Predicted}}} \\
+        &         &         & 28,967.969 &         &         &         &         & 40,593.992 &         \\  
+        &         &         & (32,662.494) &         &         &         &         & (56,871.180) &         \\  
+        \multicolumn{10}{l}{\textit{\textbf{Non-experimental Sample Matched}}} \\
+\multicolumn{10}{l}{\textit{\textbf{PSID}}} \\
+    0.472 &    12.898 &    12.124 & 31311.562 &    26.835 &     0.479 &    13.080 &    12.195 & 32,445.578 &    26.737 \\  
+    (0.499) &     (1.985) &     (1.971) & (96,894.465) &     (5.779) &     (0.500) &     (1.993) &     (1.988) &  (101,000.001) &     (5.729) \\  
+\multicolumn{10}{l}{\textit{\textbf{NLSY79}}} \\
     0.431 &    12.997 &  5965.449 & 22211.332 & 26197.327 &     0.386 &    13.282 &  5870.871 & 22732.107 & 26604.203 \\  
-    0.495 &     1.938 &  5107.452 & 10960.699 & 24321.145 &     0.487 &     2.026 &  4976.174 & 11474.550 & 24844.275 \\  
+    (0.495) &     (1.938) &  (5,107.452) & (10,960.699) & (24,321.145) &     (0.487) &     (2.026) &  (4,976.174) & (11,474.550) & (24,844.275) \\  
+    \multicolumn{10}{l}{\textit{\textbf{CNLSY}}} \\
     0.471 &    12.923 & 11503.405 & 25873.078 &    29.229 &     0.471 &    12.923 & 11503.405 & 25873.078 &    29.229 \\  
-    0.499 &     2.038 & 11050.349 & 21668.840 &     6.712 &     0.499 &     2.038 & 11050.349 & 21668.840 &     6.712 \\  
-    0.500 &    12.763 &    10.964 & 23298.833 &    29.708 &         . &         . &         . &         . &         . \\  
-    0.500 &     1.860 &     1.419 & 21565.480 &     6.543 &         . &         . &         . &         . &         . \\  
-    0.542 &    11.520 &  3742.031 & 17191.630 & 15013.095 &         . &         . &         . &         . &         . \\  
-    0.498 &     1.081 &  4107.605 & 11392.587 & 21716.464 &         . &         . &         . &         . &         . \\  
-    0.441 &    12.701 &  9211.158 & 21693.718 &    30.058 &         . &         . &         . &         . &         . \\  
-    0.497 &     2.050 & 10289.319 & 21971.340 &     7.022 &         . &         . &         . &         . &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+    (0.499) &     (2.038) & (11,050.349) & (21,668.840) &     (6.712) &     (0.499) &     (2.038) & (11,050.349) & (21,668.840) &     6.712 \\ 
+        \multicolumn{10}{l}{\textit{\textbf{Non-experimental Sample with $\bm{B} \in \mathcal{B}_{0}$}}} \\ 
+    \multicolumn{10}{l}{\textit{\textbf{PSID}}} \\
+    0.500 &    12.763 &    10.964 & 23298.833 &    29.708 &         &         &         &         &         \\  
+    (0.500) &     (1.860) &     (1.419) & (21,565.480) &     6.543 &         &         &         &         &         \\  
+    \multicolumn{10}{l}{\textit{\textbf{NLSY79}}} \\
+    0.542 &    11.520 &  3,742.031 & 17191.630 & 15013.095 &         &         &         &         &         \\  
+    (0.498) &     (1.081) &  (4,107.605) & (11,392.587) & (21,716.464) &         &         &         &         &         \\
+    \multicolumn{10}{l}{\textit{\textbf{CNLSY}}} \\  
+    0.441 &    12.701 &  9211.158 & 21693.718 &    30.058 &         &         &         &         &         \\  
+    (0.497) &     (2.050) & (10,289.319) & (21,971.340) &     (7.022) &         &         &         &         &         \\  \bottomrule \end{tabular}
