--- a/output/allsamplesmatch_ready.tex
+++ b/output/allsamplesmatch_ready.tex
@@ -1,27 +1,30 @@
-\begin{tabular}{ccccccccccc} \toprule
+\begin{tabular}{ccccccccccc} \hline \hline
 \multicolumn{5}{c}{\textbf{Control}} & \multicolumn{5}{c}{\textbf{Treatment}} \\
-Male  & Education (30)  & Labor Income (21)  & Labor Income (30)   & BMI (34) & Male  & Education (30)  & Labor Income (21)  & Labor Income (30)   & BMI (34) \\ \midrule
-\multicolumn{10}{l}{\textit{\textbf{ABC/CARE}}} \\ \\
-    0.487 &    12.279 & 13,890.419 & 24,711.694 &    34.153 &     0.507 &    13.646 & 14,057.678 & 25,217.499 &    32.750 \\  
-    (0.503) &     (2.265) & (12,603.333) & (24,461.184) &     (7.524) &    (0.503) &     (2.414) & (11,472.872) & (22,745.919) &     (7.004) \\  \\ 
-\multicolumn{10}{l}{\textit{\textbf{Non-experimental Sample Matches}}} \\
+Male  & Education (30)  & Labor Income (21) & Labor Income (30)  & BMI (34) & Male  & Education (30)  & Labor Income (21) & Labor Income (30)  & BMI (34)  \\  \midrule
+\multicolumn{10}{l}{\textit{\textbf{ABC/CARE}}} \\
+\multicolumn{10}{l}{\textbf{Actual}} \\
+    0.487 &    12.279 & 13,890.419 & 26,083.818 &    32.737 &     0.507 &    13.646 & 14,057.678 & 38,461.222 &    31.299 \\  
+    (0.503) &     (2.265) & (12,603.333) & (26,747.451) &     (7.168) &     (0.503) &     (2.414) & (11,472.872) & (58,824.180) &     (6.363) \\  
+\multicolumn{10}{l}{\textbf{Predicted}} \\
+        &         &         & 28,967.969 &         &         &         &         & 40,593.992 &         \\  
+        &         &         & (32,662.494) &         &         &         &         & (56,871.180) &         \\  
+        \multicolumn{10}{l}{\textit{\textbf{Non-experimental Synthetic Cohorts}}} \\
 \multicolumn{10}{l}{\textbf{PSID}} \\
-    0.438 &    12.424 &     & 23,500.061 &    27.971 &     0.444 &  	12.540   &    & 24,149.740 &    27.919 \\  
-    (0.496) &     (1.751) &      & (51,545.914) &     (6.183) &     (0.497) &   (1.761)   &      & (53,724.508) &     (6.155) \\  
-\multicolumn{10}{l}{\textbf{NLSY79}} \\    
-    0.449 &    12.816 &   & 23,359.956 &  &     0.409 &    13.093 &   & 24,390.686 &  \\  
-    (0.497) &     (1.900) &   & (22,487.280) &  &     (0.492) &     (1.989) &   & (23,133.663) &  \\  
-\multicolumn{10}{l}{\textbf{CNLSY}} \\
-    0.471 &    12.923 & 11,503.405 & 25873.078 &    29.229 &     0.471 &    12.923 & 11,503.405 & 25,873.078 &    29.229 \\  
-    (0.499) &     (2.038) & (11,050.349) & (21,668.840) &     (6.712) &     (0.499) &     (2.038) & (11,050.349) & (21,668.840) &     (6.712) \\  \\
-\multicolumn{10}{l}{$\bm{B} \in \mathcal{B}_0$} \\
-\multicolumn{10}{l}{\textbf{PSID}} \\
-    0.500) &    12.763 &     & 23,298.833 &    29.708 &         &         &         &         &         \\  
-    (0.500) &     (1.860) &      & (21,565.480) &     (6.543) &         &         &         &         &          \\  
-\multicolumn{10}{l}{\textbf{NLSY79}} \\    
-    0.574 &    11.563 &   & 13,812.201 &  &         &         &         &         &          \\  
-    (0.494) &     (1.064) &   & (14,293.060) & &         &         &         &         &         \\  
-\multicolumn{10}{l}{\textbf{CNLSY}} \\
-    0.441 &    12.701 &  9,211.158 & 21,693.718 &    30.058 &         &         &         &         &         \\  
-    (0.497) &     2.050 & (10,289.319) & (21,971.340) &     (7.022) &         &         &         &         &          \\ \bottomrule \end{tabular}
-
+    0.472 &    12.898 &    & 31,311.562 &    26.835 &     0.479 &    13.080 &    & 32,445.578 &    26.737 \\  
+    (0.499) &     (1.985) &     & (96,894.465) &     (5.779) &     (0.500) &     (1.993) &      &  (101,000.001) &     (5.729) \\  
+\multicolumn{10}{l}{\textbf{NLSY79}} \\
+    0.431 &    12.997 &   & 22,211.332 &  &     0.386 &    13.282 &   & 22,732.107 &  \\  
+    (0.495) &     (1.938) &   & (10,960.699) & &     (0.487) &     (2.026) &   & (11,474.550) &  \\  
+    \multicolumn{10}{l}{\textbf{CNLSY}} \\  
+    0.471 &    12.923 & 11,503.405 & 25,873.078 &    29.229 &     0.478  &  12.923 & 11,487.266 & 25,940.491 &    29.244 \\  
+    (0.499) &     (2.038) & (11,050.349) & (21,668.840) &     (6.712) &     (0.499) &     (2.033) & (11,061.850) & (21,793.892) &     (6.732) \\ 
+        \multicolumn{10}{l}{\textit{\textbf{Non-experimental Sample with $\bm{B} \in \mathcal{B}_{0}$}}} \\ 
+\multicolumn{10}{l}{\textbf{PSID}}\\
+    0.500 &    12.763 &     & 23,298.833 &    29.708 &         &         &         &         &         \\  
+    (0.500) &     (1.860) &      & (21,565.480) &     6.543 &         &         &         &         &         \\  
+\multicolumn{10}{l}{\textbf{NLSY79}} \\
+    0.542 &    11.520 &  & 17,191.630 &  &         &         &         &         &         \\  
+    (0.498) &     (1.081) &   & (11,392.587) &  &         &         &         &         &         \\
+    \multicolumn{10}{l}{\textbf{CNLSY}} \\  
+    0.441 &    12.701 &  9,211.158 & 21693.718 &    30.058 &         &         &         &         &         \\  
+    (0.497) &     (2.050) & (10,289.319) & (21,971.340) &     (7.022) &         &         &         &         &         \\  \bottomrule \end{tabular}
