--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -410,6 +410,7 @@ Given $\bm{X}^d_{t-1}, \bm{B}, \eta^d_{l,t}$,
 \end{assumption}
 We assume that the elements of $\varepsilon_t^s, s \in \{0,1\}$, are mutually independent:
 
+\renewcommand\theassumption{A--\arabic{assumption}}
 \begin{assumption}\label{ass:corns}
 \begin{align*}
 &\varepsilon^s_{j,t} \indep \varepsilon^s_{k,t^\prime} | \bm{X}^s, s \in \{0,1\}\\
